# FIN-525-Project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: all_coins.json  all_coins_by_mc_1.json  all_coins_by_mc_2.json  all_coins_with_marketcap.json  id_coins.csv  raw_market_caps_1.csv  raw_prices_1.csv  raw_volumes_1.csv
notebooks/: Analysis of the clusters.ipynb  Asset_selection.ipynb  Choose_coins.ipynb  Communities.ipynb  Communities_jeremy.ipynb  Main.ipynb  sandbox.ipynb
src/: utils.py
src/loader/: utils.py
src/scripts/: data_downloader.py
