[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
requests = "^2.31.0"
docopt = "^0.6.2"
networkx = "^3.2.1"
community = "^1.0.0b1"
python-louvain = "^0.16"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
